# poetry-with-dotenvs

./: .env  README.md  example.py  pyproject.toml
poetry_with_dotenvs/: __init__.py
tests/: test_poetry_with_dotenvs.py
