[tool.poetry]
name = "poetry-with-dotenvs"
version = "0.1.0"
description = ""
authors = ["Chris Adams <chris@productscience.co.uk>"]

[tool.poetry.dependencies]
python = "^3.6"
python-dotenv = {extras = ["cli"], version = "^0.14.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
